# esp-viewer

./: Cargo.toml  README.md  esp_viewer.yackcheck.io.json  esp_viewer.yackcheck.io.yaml  espviewer.yakcheck.io.json  ev_config.toml  meson.build  python3-requirements.json  requirements.txt
.flatpak-builder/cache/refs/heads/x86_64-espviewer.yakcheck.io.json/: init
.flatpak-builder/checksums/: x86_64-espviewer.yakcheck.io.json
data/: esp_viewer.yackcheck.io.desktop.in  esp_viewer.yackcheck.io.gschema.xml  esp_viewer.yackcheck.io.metainfo.xml.in  espviewer.yakcheck.io.desktop.in  espviewer.yakcheck.io.gschema.xml  espviewer.yakcheck.io.metainfo.xml.in  meson.build
data/icons/: meson.build
docs/: README.md  code_doc.md  manual.md
po/: POTFILES  meson.build
src/: application.rs  classes.dot  config.rs  configparser.py  connect.py  controls.py  esp-viewer.gresource.xml  esp_viewer.gresource.xml  esp_viewer.in  main.py  main.rs  meson.build  packages.dot  stackgenerator.py  stream.py  window.py  window.rs  window.ui
src/ui/: about.ui  connect_dialog.ui  help-overlay.ui  window.ui  window.ui.2
